@@ -7,7 +7,7 @@
 # wrapper.sh --shuffle --debug
 # wrapper.sh --verbose # display full output of tests while running
 
-TESTS="aromatic.pl atom bond cansmi conversion data format"
+TESTS="aromatic.pl atom bond cansmi cmlreadfile conversion data format"
 TESTS="${TESTS} formula formalcharge inchi.pl inchi2.pl"
 TESTS="${TESTS} internalcoord iterators" 
 TESTS="${TESTS} invalidsmarts invalidsmiles"
